tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__ExtremeCombustio-AAAAAAAAAAAAAAAAAAALzg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3022,
  "prerequisites": [
    3021
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Very similar to the LCE in most aspects, the Extreme Combustion Engine was created to close the gap between the diesels and more advanced forms of powergen, mainly nuclear fusion. However, the main thing they differ on is the fuel that they can run, and in this case you're limited to the powerful fuel from the last tier, High Octane Gasoline.\n\nThat's right, only this fuel will work, and in exchange the ECE will output more than 10k EU/t. If you add Liquid Oxygen, which you'll need 4 Vacuum Freezers for (3 at HV and 1 at EV), you can keep it boosted permanently, which will send it up to 4 IV amps of power and 150% fuel efficiency. It's in your best interest to keep this thing going if you want to keep using Oil fuels for power, and the only thing you can rely on is your automated HOG setup, which you might have to, and should improve with the new IV multis as soon as you can, unless you have other sources of power working simultaneously.\n\nAs a last note, there is also an IV equivalent of the Vacuum Freezer, if you want to tackle the Liquid Oxygen needs that way. It's more power efficient, look it up on the GT++ tab.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Extreme Combustion Engine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3021
  ],
  "rewards": [],
  "tasks": []
}
