tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__GeneratorPower-AAAAAAAAAAAAAAAAAAALrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2990,
  "prerequisites": [
    176,
    546
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Welcome to EV! If you thought the previous tier had a big jump in oil processing, you are correct, but now it's going to jump up all over again!\n\nThis tier does not unlock new processing multis like HV did, but it does bring better, much better generators. From now on, your main generators options will almost always be multiblocks, unless you need an easy-to-move generator for a multiblock miner or something similar. For your diesel fuels, the next step is the Large Combustion Engine (LCE), and there is a quest for it on the Multiblock Goals tab as usual. This, however, is a big investment in Titanium, amongst other things, so I hope you have that processing automated already.\n\nIf you boost the LCE, you will get both a huge boost in EU/t and efficiency. While an HV Diesel Generator had an output of 512 EU/t at 85% efficiency, this expensive multi outputs 6144 EU/t at 150% efficiency! Make sure you have an EV Buffered Dynamo Hatch that can handle this output.\nThere is an equivalent turbine for gases, like the Refinery Gas you might be using to power your oil processing setup, which is cheaper to build but its performance depends on the turbine placed inside it, and you won't be able to get near the levels of the LCE unless you get some Tungstensteel, and a good metal like Shadow Metal.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Generator Power",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    546
  ],
  "rewards": [],
  "tasks": []
}
