tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__HighOctaneGasoli-AAAAAAAAAAAAAAAAAAALyw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3019,
  "prerequisites": [
    3015,
    3016,
    3017,
    3018
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Gasoline is a regular fuel, as I'm sure you know. Nothing special about it, it's the same as Diesel but with a different density, for different engines. In real life, it's incredibly useful for the average person, but in GTNH it's mostly replaced by Diesel. However, that is about to change.\n\nThis step is by far the most complicated one in the entire chain, but you already automated all the additives you need, so this is just a matter of mixing. This is the EV step, the final step, so put your chemicals together. Add Octane to help the fuel resist compression after putting in the explosive Toluene, mix in the nitrous to juice it up and finish by controlling it with Anti-Knock Agent. Mix this all with Gasoline and you have HOG, the most powerful diesel fuel in the game.\n\nThere is more progression to the oil processing, and more quests from here, but this is it for fuel improvements. What is left for you is unlocking, and building even better generators that can take full advantage of how powerful HOG is. Nuclear Power is likely to be your next step in power, as diesels cannot last forever, but you can still continue through this path.\n\nOh, and congratulations! You have earned this reward.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "High Octane Gasoline",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3015,
    3016,
    3017,
    3018
  ],
  "rewards": [],
  "tasks": []
}
