tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__HyperheatedSteam-AAAAAAAAAAAAAAAAAAAL1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3028,
  "prerequisites": [
    3026
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If there is someone who found themselves invested in the Large Tungstensteel Boilers, this one is for you. Through the pollution, the multiblock spamming and the chained processing lines you need to get here, you will find that this is a lot of heat for one boiler to handle. Why not make two quad boilers?\n\nYou might be thinking about the number of turbine multis you need to withstand this, but fret not! There are extra large turbines, for the extra large steam enthusiast. You will need twelve turbine items for each multi, and you best bring the best ones you can make! Loose mode is up to you, just go wild with your super fuel.\n\n[warn]You will need an Assembly Line to craft the dynamo needed to complete this quest.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hyperheated Steam",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "SECRET"
  },
  "required_prerequisites": [
    3026
  ],
  "rewards": [],
  "tasks": []
}
