tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WorkingwithOil-AAAAAAAAAAAAAAAAAAAADw==__MagicSuperFuel-AAAAAAAAAAAAAAAAAAALxQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3013,
  "prerequisites": [
    3011
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Solid Super Fuel is an excellent fuel to burn in the Titanium Boiler, but you can do something even better than that. With a touch of magic, you can make yet another solid fuel with 50% more fuel value than the last one, but it's very likely that you will need Thaumcraft progression to automate this fully, should you wish to do so.\n\nIf you do want to do it, I recommend you also find a way to automate Coal, from IC2 crops for example, because the recipes that use it is much more efficient on liquid fuel than the other coals. You will also end up making more boilers, perhaps a quad Titanium Boiler, which will surely force you to increase the amount of Steam Turbines you'll have to make, but there is a catch here: you can use the screwdriver to change the turbine's mode into Loose mode, which significantly decreases their efficiency but boosts their speed by something like 8 times, depending on the turbine you're using. Given that this process already boosts the efficiency of your fuels a lot, you may want to lose some of it to keep your number of turbines low.\n\nI'll leave the planning up to you.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magic Super Fuel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3011
  ],
  "rewards": [],
  "tasks": []
}
